--- a/index.html
+++ b/index.html
@@ -1,193 +1,193 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Floating Horizontal Menu</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-<div id="menu">
-<li><a href="#about">About Me</a></li>
-<li><a href="#photos">My Photos</a></li>
-<li><a href="#playlist">My Playlist</a></li>
-<li><a href="#like">Like</a></li>
-<li><a href="#qrcoder">QR code</a></li>
-<li><a href="#spa">Q&A</a></li>
-<li><a href="#contact">Contact Me</a></li>
-</div>
-		  
-<section id="about" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-about me
-<br/>
-<br/>
-<br/>
-</section>
+    <nav id="menu">
+        <div class="logo">
+            <h1>Tamara</h1> <!-- Replace with your desired text or title -->
+        </div>
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#photos">My Photos</a></li>
+            <li><a href="#playlist">My Playlist</a></li>
+            <li><a href="#like">Like</a></li>
+            <li><a href="#qrcoder">QR code</a></li>
+            <li><a href="#spa">Q&A</a></li>
+            <li><a href="#contact">Contact Me</a></li>
+        </ul>
+    </nav>
+    <section id="about" class="section">
+        <br />
+        <br />
+        about me
+        <p class="about-text">
+            "Hello, I'm Dr. Tamara Babayeva, a seasoned pediatrician at 78 years.<br>
+            With a career spanning four decades, I've dedicated 30 years to serving the community at Clalit HMO's community clinic, nurturing and caring for countless families.<br>
+            As a proud mother of three wonderful daughters, a grandmother to 13 delightful grandchildren, and a great-grandmother to 8 precious little ones, family is my greatest joy and source of pride.<br>
+            Outside of my professional life, I find immense pleasure in the simple joys of reading, writing, and immersing myself in the beauty of music.<br>
+            My interests extend beyond the medical field, as I'm deeply engaged in both local and Russian politics.<br>
+            With each passing year, I cherish the memories of the past and embrace the journey ahead, grateful for the love and experiences that have shaped me into the woman I am today."
+        </p>
+        <br />
+        <br />
+        <br />
+    </section>
+    <section id="photos" class="section">
+        <br />
+        <br />
+        my photos
+        <div class="row">
+            <div class="column">
+                <img src="DSC_0747.jpg" alt="Snow">
+            </div>
+            <div class="column">
+                <img src="DSC_0771.jpg" alt="Forest">
+            </div>
+            <div class="column">
+                <img src="DSC_0665.jpg" alt="Mountains">
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <img src="DSC_0167.jpg" alt="Mountains">
+            </div>
+            <div class="column">
+                <img src="DSC_2014.jpg" alt="Mountains">
+            </div>
+            <div class="column">
+                <img src="sgm-140.jpg" alt="Mountains">
+            </div>
+        </div>
+        <br />
+        <br />
+        <br />
+    </section>
+    <section id="playlist" class="section">
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        my playlist
+        <div class="video-container">
+            <!-- First YouTube video -->
+            <div class="video">
+                <iframe width="700" height="315" src="https://www.youtube.com/embed/5l3v4tRxYeg?si=n-HDglhA7MaTi8Si" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
 
-<section id="photos" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my photos
-<br/>
-<br/>
-<br/>
-</section>
+            <!-- Second YouTube video -->
+            <div class="video">
+                <iframe width="700" height="315" src="https://www.youtube.com/embed/0LtL78GPDdc?si=SD9ziY6f8ULPJF-i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
 
-<section id="playlist" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my playlist
-<br/>
-<br/>
-<br/>
-</section>
+            <!-- Add more videos as needed -->
 
-<section id="like" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-give me a like
-<br/>
-<br/>
-<br/>
-</section>
+        </div>
+        <br />
+        <br />
+        <br />
+    </section>
 
-<section id="qrcoder" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-scan my code
-<br/>
-<br/>
-<br/>
-</section>
+    <section id="like" class="section">
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        give me a like
+        <br />
+        <br />
+        <br />
+    </section>
 
-<section id="spa" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-ans
-<br/>
-<br/>
-<br/>
-</section>
+    <section id="qrcoder" class="section">
+        <br />
+        <br />
+        scan my code
+        <br />
+        <br />
+        <br />
+    </section>
 
-<section id="contact" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-contact me
-<br/>
-<br/>
-<br/>
-</section>
+    <section id="spa" class="section">
+        <br />
+        <br />
+        <br />
+        ans
+        <br />
+        <br />
+        <br />
+    </section>
+
+    <section id="contact" class="section">
+        <br />
+        <br />
+        <br />
+        <br />
+        contact me
+        <div class="row">
+            <div class="column">
+                <div class="card">
+                    <img src="DSC_2014.JPG" alt="Tamara" style="width:20%">
+                    <div class="container">
+                        <h2>Tamara Babayeva</h2>
+                        <p class="title">Dr</p>
+                        <p>Contact me, i'd love to be in touch!'.</p>
+                        <p>example@example.com</p>
+                        <p><button class="button">Contact</button></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br />
+        <br />
+        <br />
+    </section>
 
 
-<script type="text/javascript">
-$(function(){
-  $("#nav a").click(function(e){
-    e.preventDefault();
-    $('html,body').scrollTo(this.hash,this.hash); 
-  });
-});
-</script>
-<script type="text/javascript">
- $(document).scroll(function() {
-    $('#menu').toggle($(this).scrollTop()>1000)
- });​
- </script>
+    <script type="text/javascript">
+        $(function () {
+            $("#nav a").click(function (e) {
+                e.preventDefault();
+                $('html,body').scrollTo(this.hash, this.hash);
+            });
+        });
+    </script>
+    <script type="text/javascript">
+        $(document).scroll(function () {
+            $('#menu').toggle($(this).scrollTop() > 1000)
+        });
+    </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
