--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dr Tamara Babayeva</title>
+    <link rel="stylesheet" href="styles.css">
     <title>Floating Horizontal Menu</title>
     <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -45,24 +47,24 @@
         my photos
         <div class="row">
             <div class="column">
-                <img src="DSC_0747.jpg" alt="Snow">
+                <img src="DSC_0747.jpg" alt="1">
             </div>
             <div class="column">
-                <img src="DSC_0771.jpg" alt="Forest">
+                <img src="DSC_0771.jpg" alt="2">
             </div>
             <div class="column">
-                <img src="DSC_0665.jpg" alt="Mountains">
+                <img src="DSC_0665.jpg" alt="3">
             </div>
         </div>
         <div class="row">
             <div class="column">
-                <img src="DSC_0167.jpg" alt="Mountains">
+                <img src="DSC_0167.jpg" alt="4">
             </div>
             <div class="column">
-                <img src="DSC_2014.jpg" alt="Mountains">
+                <img src="DSC_2014.jpg" alt="5">
             </div>
             <div class="column">
-                <img src="sgm-140.jpg" alt="Mountains">
+                <img src="sgm-140.jpg" alt="6">
             </div>
         </div>
         <br />
