--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="about" class="section">
         <br />
         <br />
-        about me
+        <h2>About Me</h2>
         <p class="about-text">
             "Hello, I'm Dr. Tamara Babayeva, a seasoned pediatrician at 78 years.<br>
             With a career spanning four decades, I've dedicated 30 years to serving the community at Clalit HMO's community clinic, nurturing and caring for countless families.<br>
@@ -38,13 +38,9 @@
             With each passing year, I cherish the memories of the past and embrace the journey ahead, grateful for the love and experiences that have shaped me into the woman I am today."
         </p>
         <br />
-        <br />
-        <br />
     </section>
     <section id="photos" class="section">
-        <br />
-        <br />
-        my photos
+        <h2>My Photos</h2>
         <div class="row">
             <div class="column">
                 <img src="DSC_0747.jpg" alt="1">
@@ -58,10 +54,10 @@
         </div>
         <div class="row">
             <div class="column">
-                <img src="DSC_0167.jpg" alt="4">
+                <img src="DSC_0676.jpg" alt="4">
             </div>
             <div class="column">
-                <img src="DSC_2014.jpg" alt="5">
+                <img src="DSC_0170.jpg" alt="5">
             </div>
             <div class="column">
                 <img src="sgm-140.jpg" alt="6">
@@ -71,36 +67,40 @@
         <br />
         <br />
     </section>
+
     <section id="playlist" class="section">
         <br />
         <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        my playlist
+        <h2>My Playlist</h2>
         <div class="video-container">
             <!-- First YouTube video -->
             <div class="video">
-                <iframe width="700" height="315" src="https://www.youtube.com/embed/5l3v4tRxYeg?si=n-HDglhA7MaTi8Si" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/5l3v4tRxYeg?si=n-HDglhA7MaTi8Si" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <!-- Second YouTube video -->
             <div class="video">
-                <iframe width="700" height="315" src="https://www.youtube.com/embed/0LtL78GPDdc?si=SD9ziY6f8ULPJF-i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/0LtL78GPDdc?si=SD9ziY6f8ULPJF-i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
-            <!-- Add more videos as needed -->
+            <!-- third YouTube video -->
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/2U1Bdm5LAlc?si=6fAY5Ubnxwe9JZHG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+
+            <!-- fourth YouTube video -->
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/fbB7z6UKq1g?si=sGuk06xl4UbkbnpN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <!-- fifth YouTube video -->
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/8s8GlypTbtY?si=UocU9llR8Pte1l4V" title="YouTube video player" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <!-- sixth YouTube video -->
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/_uZkni0bodQ?si=7r6-XUrOXoNsqlbo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+
 
         </div>
         <br />
@@ -108,24 +108,13 @@
         <br />
     </section>
 
+
+
     <section id="like" class="section">
         <br />
         <br />
         <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        give me a like
+        <h2>Give Me a Like</h2>
         <br />
         <br />
         <br />
@@ -134,7 +123,7 @@
     <section id="qrcoder" class="section">
         <br />
         <br />
-        scan my code
+        <h2>Scan My Code</h2>
         <br />
         <br />
         <br />
@@ -144,7 +133,7 @@
         <br />
         <br />
         <br />
-        ans
+        <h2>Ans</h2>
         <br />
         <br />
         <br />
@@ -155,7 +144,7 @@
         <br />
         <br />
         <br />
-        contact me
+        <h2contact me</h2>
         <div class="row">
             <div class="column">
                 <div class="card">
