included images folder and correct paths

--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
         <h2>My Photos</h2>
         <div class="row">
             <div class="column">
-                <img src="DSC_0747.jpg" alt="1">
+                <img src="images\DSC_0170.JPG" alt="1">
             </div>
             <div class="column">
-                <img src="DSC_0771.jpg" alt="2">
+                <img src="images\DSC_0771.jpg" alt="2">
             </div>
             <div class="column">
-                <img src="DSC_0665.jpg" alt="3">
+                <img src="images\DSC_0665.jpg" alt="3">
             </div>
         </div>
         <div class="row">
             <div class="column">
-                <img src="DSC_0676.jpg" alt="4">
+                <img src="images\DSC_0676.jpg" alt="4">
             </div>
             <div class="column">
-                <img src="DSC_0170.jpg" alt="5">
+                <img src="images\DSC_0170.jpg" alt="5">
             </div>
             <div class="column">
-                <img src="sgm-140.jpg" alt="6">
+                <img src="images\sgm-140.jpg" alt="6">
             </div>
         </div>
         <br />
