included images folder and correct paths 2

--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
                 <img src="images\DSC_0170.JPG" alt="1">
             </div>
             <div class="column">
-                <img src="images\DSC_0771.jpg" alt="2">
+                <img src="images\DSC_0771.JPG" alt="2">
             </div>
             <div class="column">
-                <img src="images\DSC_0665.jpg" alt="3">
+                <img src="images\DSC_0665.JPG" alt="3">
             </div>
         </div>
         <div class="row">
             <div class="column">
-                <img src="images\DSC_0676.jpg" alt="4">
+                <img src="images\DSC_0676.JPG" alt="4">
             </div>
             <div class="column">
-                <img src="images\DSC_0170.jpg" alt="5">
+                <img src="images\DSC_0170.JPG" alt="5">
             </div>
             <div class="column">
                 <img src="images\sgm-140.jpg" alt="6">
