--- a/index.html
+++ b/index.html
@@ -146,18 +146,18 @@
         <br />
         <h2contact me</h2>
         <div class="row">
-            <div class="column">
-                <div class="card">
-                    <img src="DSC_2014.JPG" alt="Tamara" style="width:20%">
-                    <div class="container">
-                        <h2>Tamara Babayeva</h2>
-                        <p class="title">Dr</p>
-                        <p>Contact me, i'd love to be in touch!'.</p>
-                        <p>example@example.com</p>
-                        <p><button class="button">Contact</button></p>
-                    </div>
-                </div>
-            </div>
+        <div class="column">
+        <div class="card">
+        <img src="images\DSC_2014.JPG" alt="Tamara" style="width:20%">
+        <div class="container">
+        <h2>Tamara Babayeva</h2>
+        <p class="title">Dr</p>
+        <p>Contact me, i'd love to be in touch!</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+        </div>
+        </div>
+        </div>
         </div>
         <br />
         <br />
