--- a/index.html
+++ b/index.html
@@ -144,26 +144,30 @@
         <br />
         <br />
         <br />
-        <h2contact me</h2>
+        <h2>Contact me</h2>
         <div class="row">
-        <div class="column">
-        <div class="card">
-        <img src="images\DSC_2014.JPG" alt="Tamara" style="width:20%">
-        <div class="container">
-        <h2>Tamara Babayeva</h2>
-        <p class="title">Dr</p>
-        <p>Contact me, i'd love to be in touch!</p>
-        <p>example@example.com</p>
-        <p><button class="button">Contact</button></p>
-        </div>
-        </div>
-        </div>
+            <div class="column">
+                <div class="card">
+                    <img src="images/DSC_2014.JPG" alt="Tamara" style="width:20%">
+                    <div class="container">
+                        <h2>Tamara Babayeva</h2>
+                        <p class="title">Contact me, I'd love to be in touch!</p>
+                        <p><button id="contactButton" class="button">Contact</button></p>
+                    </div>
+                </div>
+            </div>
         </div>
         <br />
         <br />
         <br />
     </section>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+    <script>
+        document.getElementById("contactButton").onclick = function () {
+            window.location.href = "mailto:babayevatamara@gmail.com";
+        };
+    </script>
 
     <script type="text/javascript">
         $(function () {
@@ -173,12 +177,12 @@
             });
         });
     </script>
+
     <script type="text/javascript">
         $(document).scroll(function () {
-            $('#menu').toggle($(this).scrollTop() > 1000)
+            $('#menu').toggle($(this).scrollTop() > 1000);
         });
     </script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
