--- a/index.html
+++ b/index.html
@@ -115,6 +115,39 @@
         <br />
         <br />
         <h2>Give Me a Like</h2>
+        <p>Page Views: <span id="view-count">0</span></p>
+        <button id="like-button">Like</button> <span id="like-count">0</span> Likes
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {
+            const viewCountElement = document.getElementById('view-count');
+            const likeCountElement = document.getElementById('like-count');
+            const likeButton = document.getElementById('like-button');
+
+            // Initialize page views
+                fetch('https://api.countapi.xyz/hit/namespace=wed-2023.github.io/assignment1-shirmor/views')
+                .then(response => response.json())
+                .then(data => {
+                    viewCountElement.textContent = data.value;
+                });
+
+            // Initialize likes
+                fetch('https://api.countapi.xyz/get/wed-2023.github.io/assignment1-shirmor/likes')
+                .then(response => response.json())
+                .then(data => {
+                    likeCountElement.textContent = data.value;
+                });
+
+            // Like button functionality
+            likeButton.addEventListener('click', () => {
+                fetch('https://api.countapi.xyz/hit/wed-2023.github.io/assignment1-shirmor/likes')
+                    .then(response => response.json())
+                    .then(data => {
+                        likeCountElement.textContent = data.value;
+                    });
+            });
+        });
+        </script>
+
         <br />
         <br />
         <br />
@@ -151,7 +184,7 @@
                     <img src="images/DSC_2014.JPG" alt="Tamara" style="width:20%">
                     <div class="container">
                         <h2>Tamara Babayeva</h2>
-                        <p class="title">Contact me, I'd love to be in touch!</p>
+                        <h3 class="title">Contact me, I'd love to be in touch!</h3>
                         <p><button id="contactButton" class="button">Contact</button></p>
                     </div>
                 </div>
